some dropdowns and style for listings page

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -1,14 +1,150 @@
+#dropdownMenu1 {
+	border: none;
+	background-color: transparent;
+}
+
+.titles1 {
+	text-align: center;
+}
+
+.section1 {
+	clear: both;
+	padding: 0px;
+	margin: 0px;
+}
+
+/*  COLUMN SETUP  */
+.col_listing {
+	display: block;
+	float:left;
+	text-align: center;
+	
+}
+.col_listing:first-child { margin-left: 0; }
+
+
+/*  GROUPING  */
+.group1:before,
+.group1:after {
+	content:"";
+	display:table;
+}
+.group1:after {
+	clear:both;
+}
+.group1 {
+    zoom:1; /* For IE 6/7 */
+}
+	
+	/*  GRID OF FOUR   ============================================================================= */
+
+	
+.span_4_of_4_listing {
+	width: 100%; 
+}
+
+.span_3_of_4_listing {
+	width: 74.6%; 
+}
+
+.span_2_of_4_listing {
+	width: 49.2%; 
+}
+
+.span_1_of_4_listing {
+	width: 23.8%; 
+}
+
+
+/*  GO FULL WIDTH AT LESS THAN 480 PIXELS */
+
+@media only screen and (max-width: 480px) {
+	.span_4_of_4_listing {
+		width: 100%; 
+	}
+	.span_3_of_4_listing {
+		width: 100%; 
+	}
+	.span_2_of_4_listing {
+		width: 100%; 
+	}
+	.span_1_of_4_listing {
+		width: 100%; 
+	}
+}
+
+@media only screen and (min-width: 990px){
+	.span_4_of_4_listing {
+		width: 100%; 
+	}
+	.span_3_of_4_listing {
+		width: 100%; 
+	}
+	.span_2_of_4_listing {
+		width: 100%; 
+	}
+	.span_1_of_4_listing {
+		width: 100%; 
+	}
+}
+
+#masthead {
+	margin-top: 10px;
+}
+
+
+#classify {
+	font-size:40px;
+	font-weight: bold;
+}
+
+.btn-lg {
+	margin-top: 10px;
+}
+#login-sign-in-link {
+	color:black;
+}
+
+.entry-form button.submit:hover, .btn:hover {
+	background-color: white;
+	border-color: rgb(26,41,119);
+}
+.btn {
+	padding: 8px 12px 8px 12px;
+}
+
+#srch-term {
+	padding: 18px 10px 18px 10px;
+}
+.btn-default {
+	background-color: rgba(255,255,255,.9);
+	border-style: solid;
+    border-width: 2px;
+    border-color: rgb(26,41,119);
+    border-radius: 1.5px;
+}
+
+
 /* HOME STYLING */
 
+.login-link-and-dropdown-list {
+	border-style: solid;
+    border-width: 2px;
+    border-color: rgb(26,41,119);
+    padding: 10px 15px 10px 22px;
+    background-color: rgba(255,255,255,.9);
+    border-radius: 1.5px;
+    font-size: 15px;
+    margin: 10px;
+}
 /* SIGN UP BUTTON STYLING */
 .signIn {
 	color:white;
 	text-decoration: underline;
-	
-	
+		
 }
 .signIn:hover {
-	color: #428bca;
+	color: white;
 }
 
 .entry-form button.submit {
@@ -25,6 +161,13 @@
 	text-align: center;
 	width: 250px; 
 	display: -webkit-inline-box;
+	background-color: rgba(255,255,255,0.9);
+	border-style: solid;
+    border-width: 2px;
+    border-color: rgb(26,41,119);
+    border-radius: 1.5px;
+    border-radius: 1.5px;
+    font-size: 15px;
 	
 }
 #signUpForm {
@@ -53,7 +196,7 @@
 
 /* NAV BAR FOR LISTING PAGE */
 .navbar-header-listingPage {
-	font-size: 30px;
+	font-size: 20px;
 	font-weight: bold;
 }
 #listingPage {
@@ -67,7 +210,7 @@
 
 /* Wrapper for page content to push down footer */
 #wrap {
-  min-height: 85%;
+  min-height: 92%;
   height: auto;
   /* Negative indent footer by its height */
   margin: 0 auto -60px;
@@ -144,7 +287,7 @@ p {
     display: table;
     width: 100%;
     height: auto;
-    padding: 100px 0;
+    padding: 000px 0;
     text-align: center;
     color: white;
     background: url('/resources/background.jpg') no-repeat bottom center scroll;
@@ -164,6 +307,7 @@ p {
     font-size: 70px;
     color: rgb(66,139,202);
     display: inline-table;
+    margin-top: 35px;
     
 }
 
@@ -181,7 +325,7 @@ p {
 @media(min-width:767px) {
     .intro {
         height: 100%;
-        padding: 0;
+        padding: 0px 15px 0px 0px;
     }
 
     .brand-heading {
@@ -190,6 +334,9 @@ p {
 
     .intro-text {
         font-size: 25px;
+    }
+    .navbar {
+	    padding-right: 10px;
     }
 }
 
@@ -296,144 +443,21 @@ body {
 	float:right;
 }
 #login-buttons {
-	padding-right: 15px;
+	padding: 0px;
 }
-@media(max-width:425px) {
+@media(max-width:500px) {
 	#login-name-link {
 		font-size: 12px;
 	}
+	.login-link-and-dropdown-list {
+		padding: 10px 10px 10px 10px;
+	}
+	
 }
 
 .navbar-right {
-	padding-top: 5px;
+	padding-top: 0px;
 }
-
-/* Styles for the Top Bar  ============================================================================= */
-
-/*Search styles*/
-/*
-.form-control {
-    text-align: center;
-}
-
-#search {
-    display: inline-table;
-}
-
-.searchbar {
-    display: table;
-}
-/**/
-/*
-p {
-    margin: 0 0 25px;
-    font-size: 18px;
-    line-height: 1.5;
-}
-
-
-@media(min-width:767px) {
-    p {
-        font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-        margin: 0 0 35px;
-        font-size: 14px;
-        line-height: 1.6;
-    }
-} 
-
-a {
-    color: black;
-    -webkit-transition: all .2s ease-in-out;
-    -moz-transition: all .2s ease-in-out;
-    transition: all .2s ease-in-out;
-}
-
-
-a:hover,
-a:focus {
-    text-decoration: none;
-    color: #176e61;
-}
-
-.container > .navbar-header, 
-.container-fluid > .navbar-header, 
-.container > .navbar-collapse, 
-.container-fluid > .navbar-collapse {
-    text-align: -webkit-center;
-}
-
-.navbar-brand:focus {
-    outline: 0;
-}
-
-.navbar-custom a {
-    color: white;
-}
-
-.navbar-custom .nav li a {
-    -webkit-transition: background .3s ease-in-out;
-    -moz-transition: background .3s ease-in-out;
-    transition: background .3s ease-in-out;
-}
-
-.navbar-custom .nav li a:hover,
-.navbar-custom .nav li a:focus,
-.navbar-custom .nav li.active {
-    outline: 0;
-}
-
-
-.navbar-toggle {
-    padding: 4px 6px;
-    font-size: 16px;
-    color: #fff;
-}
-
-.navbar-toggle:focus,
-.navbar-toggle:active {
-    outline: 0;
-}
-
-@media(min-width:800px) {
-    .navbar {
-        padding: 20px 0; 
-        border-bottom: 0;
-        letter-spacing: 1px;
-        background: 0 0;
-        -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
-        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
-        transition: background .5s ease-in-out,padding .5s ease-in-out;
-    }
-
-    .top-nav-collapse {
-        padding: 0;
-        background-color: #000;
-    }
-
-    .navbar-custom.top-nav-collapse {
-        border-bottom: 1px solid rgba(255,255,255,.3);
-    }
-} 
-
-.container {
-   width: auto;
-/*  max-width: 880px;
-*/ 
-/*padding: 0 15px;
-padding-left: 35px;
-} 
-
-@media(min-width:767px){
-    .container{
-        margin: 0px 50px;
-
-    }
-} 
-
-.container .credit {
-  margin: 20px 0;
-}
-*/
 
 .navbar {
 	border-radius: 0;
@@ -447,7 +471,7 @@ padding-left: 35px;
 .container {
 	width:auto;
 	padding: 0px;
-	margin-top: 10px;
+	margin-top: 0px;
 }
 
 .navbar-form {
@@ -464,6 +488,7 @@ padding-left: 35px;
 
 .input-group {
 	width: 200px;
+	margin:10px;
 	
 }
 
@@ -584,7 +609,7 @@ padding-left: 35px;
 	border-bottom-color: gray;
 	border-width: 1px;
 	margin-bottom: 10px;
-	margin-left: -9px;
+	margin-left: -10px;
 	padding-bottom: 3px;
 }
 
@@ -818,7 +843,132 @@ border-color: #eed3d7;
     margin-top: 7px; }
     
 
+/* Styles for the Top Bar  ============================================================================= */
 
+/*Search styles*/
+/*
+.form-control {
+    text-align: center;
+}
+
+#search {
+    display: inline-table;
+}
+
+.searchbar {
+    display: table;
+}
+/**/
+/*
+p {
+    margin: 0 0 25px;
+    font-size: 18px;
+    line-height: 1.5;
+}
+
+
+@media(min-width:767px) {
+    p {
+        font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+        margin: 0 0 35px;
+        font-size: 14px;
+        line-height: 1.6;
+    }
+} 
+
+a {
+    color: black;
+    -webkit-transition: all .2s ease-in-out;
+    -moz-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+}
+
+
+a:hover,
+a:focus {
+    text-decoration: none;
+    color: #176e61;
+}
+
+.container > .navbar-header, 
+.container-fluid > .navbar-header, 
+.container > .navbar-collapse, 
+.container-fluid > .navbar-collapse {
+    text-align: -webkit-center;
+}
+
+.navbar-brand:focus {
+    outline: 0;
+}
+
+.navbar-custom a {
+    color: white;
+}
+
+.navbar-custom .nav li a {
+    -webkit-transition: background .3s ease-in-out;
+    -moz-transition: background .3s ease-in-out;
+    transition: background .3s ease-in-out;
+}
+
+.navbar-custom .nav li a:hover,
+.navbar-custom .nav li a:focus,
+.navbar-custom .nav li.active {
+    outline: 0;
+}
+
+
+.navbar-toggle {
+    padding: 4px 6px;
+    font-size: 16px;
+    color: #fff;
+}
+
+.navbar-toggle:focus,
+.navbar-toggle:active {
+    outline: 0;
+}
+
+@media(min-width:800px) {
+    .navbar {
+        padding: 20px 0; 
+        border-bottom: 0;
+        letter-spacing: 1px;
+        background: 0 0;
+        -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
+        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
+        transition: background .5s ease-in-out,padding .5s ease-in-out;
+    }
+
+    .top-nav-collapse {
+        padding: 0;
+        background-color: #000;
+    }
+
+    .navbar-custom.top-nav-collapse {
+        border-bottom: 1px solid rgba(255,255,255,.3);
+    }
+} 
+
+.container {
+   width: auto;
+/*  max-width: 880px;
+*/ 
+/*padding: 0 15px;
+padding-left: 35px;
+} 
+
+@media(min-width:767px){
+    .container{
+        margin: 0px 50px;
+
+    }
+} 
+
+.container .credit {
+  margin: 20px 0;
+}
+*/
 
 
 
