--- a/client/views/listings/listingPage/topBarListingPage.html
+++ b/client/views/listings/listingPage/topBarListingPage.html
@@ -2,13 +2,13 @@
     
 	<nav class="navbar navbar-default" role="navigation">
 		<div class = "container">
-			<div class="navbar-header-listingPage">
-				<a href="{{pathFor 'home'}}"> classify Penn </a>
+			<div class="navbar-header">
+				<a href="{{pathFor 'home'}}" id = "classify"> classify Penn </a>
 			</div>
-			<div class="nav navbar-nav navbar-right" id="listingPage">
+			<ul class="nav navbar-nav navbar-right">
 				{{> loginButtons }}
-			</div> 
-		</div>
+			</ul> 
+	</div>		
    </nav>
     
 </template>
