--- a/client/views/home/listingsSection/listing.html
+++ b/client/views/home/listingsSection/listing.html
@@ -1,5 +1,5 @@
 <template name = "listing">
     <li id="LI_1">
-		<a a href="{{pathFor 'listingPage'}}" id="A_5" class="listing"> {{title}} ({{count}})</a>
+		<a a href="{{pathFor 'listingPage'}}" id="A_5" class="listing"> <span id = "title">{{title}}</span> ({{count}})</a>
 	</li>
 </template>
