--- a/client/views/listings/listingPage/postItem.html
+++ b/client/views/listings/listingPage/postItem.html
@@ -3,6 +3,7 @@
 	<div class="post" {{attributes}}>
 		<div class="post-content">
 			<h3><a href="{{pathFor 'postPage'}}">{{title}}</a></h3>
+			{{#if ownPost}} Edit {{/if}}
 		</div>
 	</div>
 </template>
