--- a/client/views/home/listingsSection/listingsList.html
+++ b/client/views/home/listingsSection/listingsList.html
@@ -1,37 +1,32 @@
 <template name ="listingsList">
-
-	<div class="section group" style = "list-style: none" id = "listing_section">
+	
+	<div class="section group" style = "list-style: none">
 		<div class="col span_1_of_4">
 			<h3 class ="titles">For Sale</h3>
-			<div class = "containerListing">
-				{{#each forSale}}
-			  		{{> listing}}
-				{{/each}}
-			</div>
+			{{#each forSale}}
+			  {{> listing}}
+			{{/each}}
+			
 		</div>
 		<div class="col span_1_of_4">
 			<h3 class ="titles">Housing</h3>
-			<div class = "containerListing">
-				{{#each housing}}
-			  		{{> listing}}
-				{{/each}}
-			</div>
+			{{#each housing}}
+			  {{> listing}}
+			{{/each}}
+
+
 		</div>
 		<div class="col span_1_of_4">
-			<h3 class ="titles" id="community">&nbsp;Community</h3>
-			<div class = "containerListing">
-				{{#each community}}
-			  		{{> listing}}
-				{{/each}}
-			</div>
+			<h3 class ="titles">Community</h3>
+			{{#each community}}
+			  {{> listing}}
+			{{/each}}
 		</div>
 		<div class="col span_1_of_4" id="col_4">
 			<h3 class ="titles">Jobs</h3>
-			<div class = "containerListing">
-				{{#each jobs}}
-			  		{{> listing}}
-				{{/each}}
-			</div>
+			{{#each jobs}}
+			  {{> listing}}
+			{{/each}}
 		</div>
 	</div>
 
