--- a/client/views/listings/listingPage/postItem.html
+++ b/client/views/listings/listingPage/postItem.html
@@ -3,7 +3,7 @@
 	<div class="post" {{attributes}}>
 		<div class="post-content">
 			<h3><a href="{{pathFor 'postPage'}}">{{title}}</a></h3>
-			{{#if ownPost}} Edit {{/if}}
+			{{#if ownPost}} Edit Post {{/if}}
 		</div>
 	</div>
 </template>
