--- a/client/views/listings/listingPage/postsList.html
+++ b/client/views/listings/listingPage/postsList.html
@@ -3,8 +3,8 @@
       {{> postItem}}
     {{/each}}
 
-    {{#if hasMore}}
-          <a class="load-more" id="load">Load more</a>
+    {{#if moreResults}}
+          <a class="load-more" id="loadMore">Load more</a>
     {{/if}}
 </template>
 
