--- a/client/views/home/footer/footer.html
+++ b/client/views/home/footer/footer.html
@@ -4,7 +4,7 @@
 		Help/FAQ
 	</div>
 	<div class="section group">
-		<div class="col span_1_of_2">
+		<div class="col_footer span_1_of_2">
 			<ul id="footer_links">
 				<li>
 					<a id="links" href="#">How do I use this site?</a>
@@ -17,7 +17,7 @@
 				</li>
 			</ul>
 		</div>
-		<div class="col span_1_of_2">
+		<div class="col_footer span_1_of_2">
 			<ul id="footer_links">
 				<li>
 					<a id="links" href="#">Where are my archived posts?</a>
