--- a/client/views/listings/listingPage/leftBarListingPage.html
+++ b/client/views/listings/listingPage/leftBarListingPage.html
@@ -1,8 +1,9 @@
 <template name ="leftBarListingPage">
   <!--left-->
   <div class="col-md-3" id="leftCol">
+      {{> searchListing}}
       <h3 class = "categoryHeading">
-      Category List
+      CATEGORY LIST
       </h3>
     <div class="section1 group1" style = "list-style: none">
      <div class="col_listing span_1_of_4_listing">
