--- a/client/views/listings/listingPage/topBarListingPage.html
+++ b/client/views/listings/listingPage/topBarListingPage.html
@@ -3,7 +3,7 @@
 	<nav class="navbar navbar-default" role="navigation">
 		<div class = "container">
 			<div class="navbar-header">
-				<a href="{{pathFor 'home'}}" id = "classify"> classify Penn </a>
+				<a href="{{pathFor 'home'}}" id = "classify"> logo </a>
 			</div>
 			<ul class="nav navbar-nav navbar-right">
 				{{> loginButtons }}
