--- a/client/views/listings/listingPage/listingPage.html
+++ b/client/views/listings/listingPage/listingPage.html
@@ -5,13 +5,18 @@
   <!--main-->
   <div class="container">
    <div class="row">
-
+    
     {{>leftBarListingPage}}
-
     <!--right-->
-    <div class="col-md-9">
-      <h2 id="sec1"> 
-        <div class="listingPageHeader">
+    <div class = "container">
+      <div class="navbar-header">
+        
+      </div>
+  </div>  
+    <div class="col-md-9"> 
+      <h2 id="sec1">
+        
+        <div class="listingPageHeader">  
          <div style= "text-transform:capitalize">Latest Listings in</div> 
          <div class="smallListings">&nbsp;</div>
          {{title}} </div> 
