--- a/client/views/home/topSection/search.html
+++ b/client/views/home/topSection/search.html
@@ -2,7 +2,7 @@
 	
 	<form class="navbar-form" role="search">
 		<div class="input-group">
-			<input type="text" class="form-control" placeholder="Search Communify" name="srch-term" id="srch-term">
+			<input type="text" class="form-control" placeholder="Search classify" name="srch-term" id="srch-term">
 				<div class="input-group-btn">
 					<button class="btn btn-default" type="submit"><span class="glyphicon glyphicon-search"></span></button>
 				</div>
