--- a/client/views/application/listingsList.html
+++ b/client/views/application/listingsList.html
@@ -2,14 +2,13 @@
 
 	<div class="section group" style = "list-style: none" id = "listing_section">
 		<div class="col span_1_of_4">
-			<h3 class ="titles">For Sale</h3>
 			<div class = "containerListing">
 				{{#each forSale}}
 			  		{{> listing}}
 				{{/each}}
 			</div>
 		</div>
-		<div class="col span_1_of_4">
+		<!--<div class="col span_1_of_4">
 			<h3 class ="titles">Housing</h3>
 			<div class = "containerListing">
 				{{#each housing}}
@@ -32,8 +31,8 @@
 			  		{{> listing}}
 				{{/each}}
 			</div>
-		</div>
-	</div>
+		</div> -->
+	</div> 
 
 
 </template>
