--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -111,7 +111,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">For Sale <i class="glyphicon glyphicon-chevron-down"></i></h4>
+                    <h4 class="service-heading">For Sale</h4>
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                 </div>
                 <div class="col-md-3">
