--- a/client/views/home/footer/footer.html
+++ b/client/views/home/footer/footer.html
@@ -1,38 +1,29 @@
 <template name = "footer">
-	<div class = "footer_container">
-	<div class = "footer_title">
-		Help/FAQ
-	</div>
-	<div class="section group">
-		<div class="col span_1_of_2">
-			<ul id="footer_links">
-				<li>
-					<a id="links" href="#">How do I use this site?</a>
-				</li>
-				<li>
-					<a id="links" href="#">Subscribing to searches</a>
-				</li>
-				<li>
-					<a id="links" href="#">Advanced search tips</a>
-				</li>
-			</ul>
-		</div>
-		<div class="col span_1_of_2">
-			<ul id="footer_links">
-				<li>
-					<a id="links" href="#">Where are my archived posts?</a>
-				</li>
-				<li>
-					<a id="links" href="#">Flagging inappropriate content</a>
-				</li>
-				<li>
-					<a id="links" href="#">Contact us/Get communify at your school!</a>
-				</li>
-			</ul>
-		</div>
-		
-	</div>
-	</div>
-		
-
+<footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <span class="copyright">Copyright &copy; Your Website 2014</span>
+                </div>
+                <div class="col-md-4">
+                    <ul class="list-inline social-buttons">
+                        <li><a href="#"><i class="fa fa-twitter"></i></a>
+                        </li>
+                        <li><a href="#"><i class="fa fa-facebook"></i></a>
+                        </li>
+                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <ul class="list-inline quicklinks">
+                        <li><a href="#">Privacy Policy</a>
+                        </li>
+                        <li><a href="#">Terms of Use</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 </template>
