--- a/client/views/home/listings/listingsList.html
+++ b/client/views/home/listings/listingsList.html
@@ -15,7 +15,7 @@
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">For Sale</h4>
-                    <p class="text-muted">
+                    <p class="text-muted" style="list-style: none">
                     {{#each forSale}}
 			  		  {{> listing}}
 				    {{/each}}
@@ -27,7 +27,7 @@
                         <i class="fa fa-home fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Housing</h4>
-                    <p class="text-muted">
+                    <p class="text-muted" style="list-style: none">
                     {{#each housing}}
 			  		  {{> listing}}
 				    {{/each}}
@@ -39,7 +39,7 @@
                         <i class="fa fa-users fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Community</h4>
-                    <p class="text-muted">
+                    <p class="text-muted" style="list-style: none">
                     {{#each community}}
 			  		  {{> listing}}
 				    {{/each}}
@@ -51,7 +51,7 @@
                         <i class="fa fa-briefcase fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Jobs</h4>
-                    <p class="text-muted">
+                    <p class="text-muted" style="list-style: none">
                     {{#each jobs}}
 			  		  {{> listing}}
 				    {{/each}}
