--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -43,7 +43,7 @@
       
         <div class="item active">
           
-          <img src="/resources/upenn.jpg" alt="First slide">
+          <img class = "background" src="/resources/upenn.jpg" alt="First slide">
           <div class="container">
 
             <div class="carousel-caption">
@@ -54,7 +54,7 @@
           </div>
         </div>
         <div class="item">
-          <img src="/resources/upenn2.jpg" alt="Second slide">
+          <img class = "background" src="/resources/upenn2.jpg" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Classify</h1>
@@ -64,7 +64,7 @@
           </div>
         </div>
         <div class="item">
-          <img src="/resources/upenn3.jpg" alt="Third slide">
+          <img class = "background" src="/resources/upenn3.jpg" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Classify</h1>
