--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -897,3 +897,143 @@ body {
   min-width: 100%;
   height: 500px;
 }
+
+/* Styling for post page===========================================*/
+#sidebar {
+  background-color: rgb(239,239,239);
+}
+@media(max-width: 998px) {
+  #sidebar {
+    text-align: center;
+  }
+  .sidebarHeader {
+    text-align: center;
+  }
+}
+
+.sidebarHeader {
+    box-sizing: border-box;
+    color: rgb(51, 51, 51);
+    height: 40px;
+    text-transform: uppercase;
+    font: normal normal bold 20px/40px traditionellsans, Helvetica, Arial, sans-serif;
+    margin: 0px;
+    
+} 
+@media (max-width: 998px) {
+  .sidebarHeader {
+    color: rgb(26,41,119);
+  }
+}
+
+.listingPageHeader {
+  display: -webkit-inline-box;
+  color: rgb(26,41,119);
+  border-bottom: 0px;
+  border-bottom-style: inset;
+}
+
+.smallListings {
+font-size: 16px;
+padding-top: 12px;
+}
+
+.submitPost {
+  list-style: none;
+  text-align: right;
+  padding-right: 15px;
+}
+
+.submitPost a {
+  color: white;
+  text-decoration: none;
+}
+
+.glyphicon-plus {
+  color: rgb(26,41,119);
+}
+
+.alert-error {
+color: #b94a48;
+background-color: #f2dede;
+border-color: #eed3d7;
+}
+
+.load-more {
+  display: block;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+  background: rgba(0, 0, 0, 0.05);
+  text-align: center;
+  height: 60px;
+  line-height: 60px;
+  margin-bottom: 10px; }
+  .load-more:hover {
+    cursor: pointer;
+    text-decoration: none;
+    background: rgba(0, 0, 0, 0.1); }
+
+
+.grid-block, .main, .post, .comments li, .comment-form {
+  
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px;
+  padding: 0px;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15); }
+  
+.post {
+  /* For modern browsers */
+  /* For IE 6/7 (trigger hasLayout) */
+  *zoom: 1;
+  position: relative;
+  opacity: 1; }
+  .post:before, .post:after {
+    content: "";
+    display: table; }
+  .post:after {
+    clear: both; }
+  .post.invisible {
+    opacity: 0; }
+  .post.instant {
+    -webkit-transition: none;
+    -moz-transition: none;
+    -o-transition: none;
+    transition: none; }
+  .post.animate{
+    -webkit-transition: all 300ms 0ms;
+    -webkit-transition-delay: ease-in;
+    -moz-transition: all 300ms 0ms ease-in;
+    -o-transition: all 300ms 0ms ease-in;
+    transition: all 300ms 0ms ease-in; }
+  .post .upvote {
+    display: block;
+    margin: 7px 12px 0 0;
+    float: left; }
+  .post .post-content {
+    float: left; }
+    .post .post-content h3 {
+      margin: 0;
+      line-height: 1.4;
+      font-size: 18px; }
+      .post .post-content h3 a {
+        display: inline-block;
+        margin-right: 5px; }
+      .post .post-content h3 span {
+        font-weight: normal;
+        font-size: 14px;
+        display: inline-block;
+        color: #aaaaaa; }
+    .post .post-content p {
+      margin: 0; }
+  .post .discuss {
+    display: block;
+    float: right;
+    margin-top: 7px; }
