--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -26,7 +26,7 @@
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">Post a Listing</a>
+                        <a class="page-scroll" href="{{pathFor 'postSubmit'}}">Post a Listing</a>
                     </li>
                 </ul>
             </div>
